vm1/etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Mon Jan 28 10:30:08 2019
*nat
:PREROUTING ACCEPT [1:240]
:INPUT ACCEPT [1:240]
:OUTPUT ACCEPT [3:228]
:POSTROUTING ACCEPT [3:228]
-A POSTROUTING -s 192.168.56.22 -o enp0s3 -j MASQUERADE
COMMIT
*mangle
:PREROUTING ACCEPT [14:1381]
:INPUT ACCEPT [14:1381]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1292]
:POSTROUTING ACCEPT [12:912]
COMMIT
# Completed on Mon Jan 28 10:30:08 2019
# Generated by iptables-save v1.4.21 on Mon Jan 28 10:30:08 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s3 -j ACCEPT
-A INPUT -i enp0s8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s8 -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s3 -j ACCEPT 
COMMIT
# Generated by iptables-save v1.4.21 on Mon Jan 28 10:30:08 2019
